Mapeando a exceção de validação
