# service/src/main/resources/api.yml
@@ -78,18 +78,21 @@ components:
     ResponseError:
       type: object
       required:
-        - code
-        - message
+        - field
+        - errorCode
       properties:
-        code:
-          type: integer
-          format: int32
-        status:
+        field:
           type: string
-        message:
+        errorCode:
           type: string
 
   responses:
     UnprocessableEntity:
       description: The server understands the content type of request entity was unable to process
         the contained instructions.
+      content:
+        application/json:
+          schema:
+            type: array
+            items:
+              $ref: '#/components/schemas/ResponseError'
